--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.5",
-    "angular-ui-router": "^0.2.18",
+    "angular-ui-router": "^0.4.2",
+    "bootstrap": "^4.4.1",
+    "bootstrap-ui": "^3.0.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
+    "jquery": "^3.4.1",
     "json-loader": "^0.5.4",
     "ng-annotate-loader": "^0.1.0",
     "style-loader": "^0.13.1",
