--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,12 @@
               },
               {
                 "glob": "**/*.svg",
-                "input": "node_modules/ionicons/dist/ionicons/svg",
+                "input": "node_modules/ionicons/dist/svg",
+                "output": "./svg"
+              },
+              {
+                "glob": "**/*.svg",
+                "input": "src/assets/svg",
                 "output": "./svg"
               }
             ],
@@ -39,7 +44,9 @@
                 "input": "src/global.scss"
               }
             ],
-            "scripts": []
+            "scripts": [ {
+              "input": "node_modules/ionicons/dist/index.js"
+            }]
           },
           "configurations": {
             "production": {
