--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.5.4",
     "firebase": "^7.8.0",
     "ionicons": "^5.0.0",
+    "ngx-mask-ionic": "^1.1.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
