--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/call-number": "^5.23.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/native-keyboard": "^5.22.0",
+    "@ionic-native/sms": "^5.23.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "call-number": "^1.0.1",
     "cordova-android": "8.1.0",
+    "cordova-sms-plugin": "^1.0.0",
     "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.5.4",
     "firebase": "^7.8.0",
@@ -79,7 +83,9 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-sms-plugin": {},
+      "mx.ferreyra.callnumber": {}
     },
     "platforms": [
       "android"
